AFS_Dev/src/objects/Attribute__c.object
<CustomObject>
    <fields>
        <fullName>AttributePercent__c</fullName>
        <label>Attribute %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AttributeTxt__c</fullName>
        <description>Temporary holder of attribute % value</description>
        <label>AttributeTxt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attribute Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute_TCR__c</fullName>
        <formula>IF( OR(  ISPICKVAL(Attribute_Type__c, &apos;IO Offerings&apos;)  ,ISPICKVAL(Attribute_Type__c, &apos;MC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;SI Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;TC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;AO Offerings&apos;)) , 

 NULL,

 Opportunity_Name__r.Total_Current_Revenue__c *  AttributePercent__c)</formula>
        <label>Attribute TCR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribute_TDP__c</fullName>
        <formula>IF( OR(  ISPICKVAL(Attribute_Type__c, &apos;IO Offerings&apos;)  ,ISPICKVAL(Attribute_Type__c, &apos;MC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;SI Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;TC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;AO Offerings&apos;)) , 

 NULL,

Opportunity_Name__r.Total_Deal_Potential__c *  AttributePercent__c)</formula>
        <label>Attribute TDP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribute_TypeName__c</fullName>
        <description>This will holds the value of Map String Id for each Attribute type record.</description>
        <label>Attribute Type Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accenture Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMIN:Digital Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMIN:Digital Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontals/Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IO Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventures &amp; Acquisitions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <picklist>
            <controllingField>Attribute_Type__c</controllingField>
            <picklistValues>
                <fullName>Accenture Cloud Platform-Cloud Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADOBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS - Synergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilex - Standalone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilex - Synergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAZON WEB SERVICES (AWS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Application Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Application Modernization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Capacity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Testing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO-Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIGEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Modernization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM - Synergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALLIDUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLICKSOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud-Agile Infrastructure (IaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud-Apps and Platform Services (PaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud-Business Process as a Service (BPaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud-SaaS Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud-Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WTD_TCR_Decimals__c</fullName>
        <formula>IF( OR(  ISPICKVAL(Attribute_Type__c, &apos;IO Offerings&apos;)  ,ISPICKVAL(Attribute_Type__c, &apos;MC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;SI Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;TC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;AO Offerings&apos;)) , 

 NULL,

(Opportunity_Name__r.Total_WTD_Revenue__c *  AttributePercent__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WTD TCR Decimals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WTD_TCR__c</fullName>
        <description>Weighted Total Current Revenue</description>
        <formula>IF( OR(  ISPICKVAL(Attribute_Type__c, &apos;IO Offerings&apos;)  ,ISPICKVAL(Attribute_Type__c, &apos;MC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;SI Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;TC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;AO Offerings&apos;)) , 

 NULL,

Opportunity_Name__r.Total_WTD_Revenue__c *  AttributePercent__c)</formula>
        <inlineHelpText>Weighted Total Current Revenue</inlineHelpText>
        <label>Attribute WTD TCR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WTD_TDP__c</fullName>
        <formula>IF( OR(  ISPICKVAL(Attribute_Type__c, &apos;IO Offerings&apos;)  ,ISPICKVAL(Attribute_Type__c, &apos;MC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;SI Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;TC Offerings&apos;),ISPICKVAL(Attribute_Type__c, &apos;AO Offerings&apos;)) , 

 NULL,

( Opportunity_Name__r.Total_Deal_Potential__c *  Opportunity_Name__r.Probability ) *  AttributePercent__c)</formula>
        <inlineHelpText>(TDP * Probability %) * Attribute %</inlineHelpText>
        <label>Attribute WTD TDP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Attribute</label>
    <nameField>
        <displayFormat>Att-{0000000000}</displayFormat>
        <label>Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>